# NinetyNineHaskell

./: .ghci  .gitignore  NinetyNineHaskell.cabal  README.md  stack.yaml
src/: H99_01.hs  H99_02.hs  H99_03.hs  H99_04.hs  H99_05.hs  H99_06.hs  H99_07.hs  H99_08.hs  H99_09.hs  H99_10.hs  H99_11.hs  H99_12.hs  H99_13.hs  H99_14.hs  H99_15.hs  H99_16.hs  H99_17.hs  H99_18.hs  H99_19.hs  H99_20.hs  H99_21.hs  H99_22.hs  H99_23.hs  H99_24.hs  H99_25.hs  H99_26.hs  H99_27.hs  H99_28.hs  H99_29.hs  H99_30.hs  H99_31.hs  H99_32.hs  H99_33.hs  H99_34.hs  H99_35.hs  H99_36.hs  H99_37.hs  H99_38.hs  H99_39.hs  H99_40.hs  (+60 more)
tools/: bootstrap_haskell_files.sh
