name:                NinetyNineHaskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/financeCoding/NinetyNineHaskell#readme
author:              Adam Singer
maintainer:          financeCoding@gmail.com
copyright:           2016 Adam Singer
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable NinetyNineHaskell
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       H99_01
                     , H99_02
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ipprint >= 0.6
                     , hscolour
                     , ghci-pretty
                     , time
